--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ssm Maven Webapp</name>
 	<url>http://github.com/liyifeng1994/ssm</url>
+	<properties>
+		<org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
+		<lombok.version>1.16.16</lombok.version>
+	</properties>
+
 	<dependencies>
 		<!-- 单元测试 -->
 		<dependency>
@@ -40,7 +45,7 @@
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
-			<version>3.3.0</version>
+			<version>3.4.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mybatis</groupId>
@@ -138,6 +143,13 @@
 			<groupId>commons-collections</groupId>
 			<artifactId>commons-collections</artifactId>
 			<version>3.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<build>
